# YOLO-to-Multimodal-AI

./: 2_YOLO11_Google_Colab.ipynb  README.md  main.py  pyproject.toml  requirements.txt
Count_Entering_Leaving/: main.py  requirements.txt
Count_Entering_Leaving/deep_sort_pytorch/: deepsort.txt
Count_Entering_Leaving/utils/: object_counter.py
QWEN2.5_ZERO_SHOT_OBJECT_DETECTION/: 8_Zero_shot_object_detection_qwen2_5_vl.ipynb  Zero_shot_object_detection_qwen2_5_vl.ipynb
YOLO11_DEPTH_PRO/: depth_test.py  depth_test_from_colab.py
YOLO11_SAHI_REC/: main.py  requirements.txt
analytics_yolo11/: main.ipynb  main.py
streamlit_yolo11/: object_detection.py  streamlit_object_detection_image.py  streamlit_object_detection_video.py
