[project]
name = "yolo-to-multimodal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easydict>=1.13",
    "ipykernel>=7.0.1",
    "numpy==2.2.6",
    "opencv-python==4.11.0.86",
    "sahi==0.11.36",
    "streamlit>=1.50.0",
    "ultralytics>=8.3.220",
]
